// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should be able to switch tab 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <a
      class="mr-auto navbar-brand"
      href="#"
    >
      <div
        class="logo"
      >
        <svg
          fill="none"
          height="100"
          viewBox="0 0 757 350"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505.752 0.195423L457.487 23.0953C457.242 23.2111 457.022 23.3741 456.839 23.5751C456.657 23.7762 456.516 24.0112 456.424 24.2668C456.333 24.5223 456.293 24.7935 456.306 25.0646C456.32 25.3357 456.387 25.6014 456.503 25.8467L529.908 180.584C557.183 238.148 549.878 281.814 508.408 301.547C474.848 317.474 445.878 306.362 423.275 267.559L336.363 84.3358C301.119 10.0622 253.115 -9.62392 196.17 17.3911C159.124 34.9663 137.636 66.3811 138.063 106.251C138.071 106.722 137.918 107.182 137.629 107.554C137.339 107.926 136.932 108.188 136.473 108.296C136.014 108.404 135.533 108.352 135.108 108.148C134.683 107.945 134.34 107.602 134.137 107.176L115.164 67.1993C115.048 66.9538 114.885 66.7336 114.684 66.5515C114.482 66.3694 114.247 66.2291 113.991 66.1387C113.735 66.0482 113.464 66.0095 113.193 66.0246C112.922 66.0397 112.657 66.1085 112.412 66.2269L64.1596 89.0557C63.6758 89.2893 63.3029 89.7033 63.1211 90.2089C62.9392 90.7145 62.963 91.2713 63.1872 91.7596L196.478 372.82C196.715 373.314 197.136 373.694 197.651 373.879C198.167 374.063 198.734 374.036 199.23 373.805L247.494 350.905C247.74 350.789 247.96 350.626 248.143 350.425C248.325 350.224 248.466 349.989 248.557 349.733C248.649 349.478 248.689 349.207 248.675 348.935C248.662 348.664 248.595 348.399 248.479 348.153L177.125 197.744C148.06 136.456 153.574 92.139 198.139 70.9943C232.339 54.771 258.926 65.6814 282.798 107.248C282.83 107.296 282.858 107.348 282.881 107.402L368.939 288.846C402.143 358.815 453.716 382.841 508.183 357C550.281 337.03 567.737 306.967 566.717 267.428C566.706 266.956 566.857 266.495 567.146 266.12C567.434 265.746 567.842 265.483 568.301 265.373C568.761 265.263 569.244 265.314 569.67 265.518C570.096 265.722 570.439 266.065 570.643 266.492L589.806 306.896C589.922 307.141 590.085 307.361 590.286 307.544C590.487 307.726 590.722 307.867 590.978 307.959C591.233 308.05 591.504 308.09 591.775 308.077C592.046 308.063 592.312 307.996 592.557 307.88L640.822 284.98C641.068 284.864 641.288 284.701 641.47 284.5C641.652 284.299 641.792 284.063 641.883 283.807C641.973 283.551 642.012 283.28 641.997 283.009C641.982 282.738 641.913 282.473 641.794 282.229L508.503 1.17973C508.267 0.686051 507.845 0.305631 507.33 0.121286C506.815 -0.06306 506.248 -0.0364116 505.752 0.195423Z"
            fill="#1E65F3"
          />
        </svg>
      </div>
    </a>
    <div
      class="mr-sm-2"
    >
      <div
        class="d-inline-block network-selector dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-secondary"
          type="button"
        >
          Gemini
        </button>
      </div>
    </div>
  </nav>
  <div
    class="App"
  >
    <div
      class="staker-container"
    >
      <div
        class="container"
      >
        <nav
          class="tab-controls d-flex mx-auto nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="stake"
            href="#"
            role="tab"
            tabindex="-1"
          >
            Stake
          </a>
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="withdraw"
            href="#"
            role="tab"
          >
            Withdraw
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="history"
            href="#"
            role="tab"
            tabindex="-1"
          >
            History
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <h2
                  class="text-center"
                >
                  Welcome back, 0x62DB
                </h2>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Current period
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      18945
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Next period in
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      1 hours
                    </p>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Tokens staked
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      179272.6235 
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-primary"
                        type="button"
                      >
                        Add stake
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Total rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      20.0000 
                      <br />
                      NU
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Available for withdrawal
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      179272.6235 
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        data-testid="withdraw-switch-button"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col-md-6"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Restaking
                    </p>
                    <div
                      class="h4 text-center"
                    >
                      <div
                        class="react-toggle"
                      >
                        <div
                          class="react-toggle-track"
                        >
                          <div
                            class="react-toggle-track-check"
                          >
                            <svg
                              height="11"
                              viewBox="0 0 14 11"
                              width="14"
                            >
                              <title>
                                switch-check
                              </title>
                              <path
                                d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="react-toggle-track-x"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 10 10"
                              width="10"
                            >
                              <title>
                                switch-x
                              </title>
                              <path
                                d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="react-toggle-thumb"
                        />
                        <input
                          class="react-toggle-screenreader-only"
                          data-testid="restaking-toggle"
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Wind down
                    </p>
                    <div
                      class="h4 text-center"
                    >
                      <div
                        class="react-toggle"
                      >
                        <div
                          class="react-toggle-track"
                        >
                          <div
                            class="react-toggle-track-check"
                          >
                            <svg
                              height="11"
                              viewBox="0 0 14 11"
                              width="14"
                            >
                              <title>
                                switch-check
                              </title>
                              <path
                                d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="react-toggle-track-x"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 10 10"
                              width="10"
                            >
                              <title>
                                switch-x
                              </title>
                              <path
                                d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="react-toggle-thumb"
                        />
                        <input
                          class="react-toggle-screenreader-only"
                          data-testid="winddown-toggle"
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Your worker
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      0x62DB
                    </p>
                    <div
                      class="action d-flex justify-content-center text-center"
                    >
                      <button
                        class="btn btn-secondary"
                        type="button"
                      >
                        Change worker
                      </button>
                      <button
                        class="ml-1 btn btn-secondary"
                        type="button"
                      >
                        Detach worker
                      </button>
                    </div>
                    <div
                      class="small text-muted text-center pt-1"
                    >
                      Warning! Worker change/detach is possible once in 2 periods
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Worker activity
                    </p>
                    <p
                      class="h5 text-center"
                    >
                      <span
                        class="text-secondary"
                      >
                        <span>
                          Never confirmed activity
                        </span>
                      </span>
                    </p>
                    <div
                      class="action"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <h5
                      class="pt-3 pb-3 text-center"
                    >
                      Your stakes:
                    </h5>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <div
                      class="container"
                    >
                      <div
                        class="table"
                      >
                        <div
                          class="table-row table-header"
                        >
                          <div
                            class="table-row-column table-row-index"
                          >
                            #
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Value
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Remaining
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Enactment
                          </div>
                          <div
                            class="table-row-column table-center"
                          />
                        </div>
                        <div
                          class="table-row"
                        >
                          <div
                            class="table-row-column table-row-index"
                          >
                            0
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            64369.1548 NU
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            366 periods
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Jan 24, 20 - Mar 26, 21
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            <button
                              class="m-1 btn btn-secondary btn-sm"
                              data-testid="divide-button-0"
                              type="button"
                            >
                              Divide
                            </button>
                            <button
                              class="m-1 btn btn-secondary btn-sm"
                              data-testid="prolong-button-0"
                              type="button"
                            >
                              Prolong
                            </button>
                          </div>
                        </div>
                        <div
                          class="mt-4 collapse container"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col"
                            >
                              <form
                                class=""
                              >
                                <div
                                  class="mt-2 form-group row"
                                >
                                  <div
                                    class="col-sm-3"
                                  >
                                    <input
                                      class="form-control form-control-sm"
                                      data-testid="first-substake-value"
                                      name="firstSubstakeValue"
                                      type="text"
                                      value="32184.57741283639504424"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="d-flex justify-content-center col-sm-6"
                                    style="padding-top: 8px;"
                                  >
                                    <div
                                      class="rc-slider"
                                    >
                                      <div
                                        class="rc-slider-rail"
                                      />
                                      <div
                                        class="rc-slider-track"
                                        style="left: 0%; width: 50%;"
                                      />
                                      <div
                                        class="rc-slider-step"
                                      />
                                      <div
                                        aria-disabled="false"
                                        aria-valuemax="100"
                                        aria-valuemin="0"
                                        aria-valuenow="50"
                                        class="rc-slider-handle"
                                        role="slider"
                                        style="left: 50%; transform: translateX(-50%);"
                                        tabindex="0"
                                      />
                                      <div
                                        class="rc-slider-mark"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="col-sm-3"
                                  >
                                    <input
                                      class="form-control form-control-sm"
                                      data-testid="second-substake-value"
                                      name="secondSubstakeValue"
                                      type="text"
                                      value="32184.577412836395044239"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="form-group row"
                                >
                                  <label
                                    class="form-label col-form-label col-md-2 offset-md-2"
                                  >
                                    Extend for
                                  </label>
                                  <div
                                    class="col-md-4"
                                  >
                                    <input
                                      class="form-control"
                                      name="stakeDuration"
                                      type="number"
                                      value="1"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <label
                                    class="form-label col-form-label col-md-2"
                                  >
                                    periods
                                  </label>
                                </div>
                                <div
                                  class="d-flex justify-content-center"
                                >
                                  <button
                                    class="btn btn-primary"
                                    type="submit"
                                  >
                                    Divide
                                  </button>
                                </div>
                              </form>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mt-4 collapse container"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col"
                            >
                              <form
                                class=""
                              >
                                <div
                                  class="form-group row"
                                >
                                  <label
                                    class="form-label col-form-label col-md-2 offset-md-2"
                                    for="substake-prolong-duration"
                                  >
                                    Extend for
                                  </label>
                                  <div
                                    class="col-md-4"
                                  >
                                    <input
                                      class="form-control"
                                      id="substake-prolong-duration"
                                      name="prolongDurationValue"
                                      type="number"
                                      value="1"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <label
                                    class="form-label col-form-label col-md-4"
                                  >
                                    periods
                                  </label>
                                </div>
                                <div
                                  class="d-flex justify-content-center"
                                >
                                  <button
                                    class="btn btn-primary"
                                    type="submit"
                                  >
                                    Prolong
                                  </button>
                                </div>
                              </form>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Unlocked from WorkLock
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      20000.0000 
                      <br />
                       ETH
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Policy rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      7000 
                      <br />
                       wei 
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Rewards
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    >
                      <form
                        class="w-100"
                      >
                        <div
                          class="form-group row"
                        >
                          <label
                            class="form-label col-form-label col-md-2 offset-md-2"
                            for="withdraw-value"
                          >
                            Amount
                          </label>
                          <div
                            class="col-md-4"
                          >
                            <input
                              class="form-control form-control-bg"
                              id="withdraw-value"
                              name="withdrawValue"
                              type="text"
                              value="0"
                            />
                            <div
                              class="invalid-feedback"
                              style="display: none;"
                            />
                          </div>
                          <div
                            class="col-md-2"
                          >
                            <button
                              class="btn btn-link btn-sm"
                              type="button"
                            >
                              Set max
                            </button>
                          </div>
                        </div>
                        <div
                          class="d-flex justify-content-center"
                        >
                          <button
                            class="btn btn-primary"
                            type="submit"
                          >
                            Withdraw
                          </button>
                        </div>
                      </form>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel"
            >
              <div
                class="w-100 row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="p-3 table"
                  >
                    <div
                      class="table-row table-header"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        Block #
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Action
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Worker confirmed activity
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Deposited 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Withdrawal of 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Disabled restaking
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Slashed stake for undefined
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Disabled winddown
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Divided stake
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Set worker to 0xb1d0
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Mined reward of 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Withdrawal of policy reward 0 ETH
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<App /> should render correctly 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <a
      class="mr-auto navbar-brand"
      href="#"
    >
      <div
        class="logo"
      >
        <svg
          fill="none"
          height="100"
          viewBox="0 0 757 350"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505.752 0.195423L457.487 23.0953C457.242 23.2111 457.022 23.3741 456.839 23.5751C456.657 23.7762 456.516 24.0112 456.424 24.2668C456.333 24.5223 456.293 24.7935 456.306 25.0646C456.32 25.3357 456.387 25.6014 456.503 25.8467L529.908 180.584C557.183 238.148 549.878 281.814 508.408 301.547C474.848 317.474 445.878 306.362 423.275 267.559L336.363 84.3358C301.119 10.0622 253.115 -9.62392 196.17 17.3911C159.124 34.9663 137.636 66.3811 138.063 106.251C138.071 106.722 137.918 107.182 137.629 107.554C137.339 107.926 136.932 108.188 136.473 108.296C136.014 108.404 135.533 108.352 135.108 108.148C134.683 107.945 134.34 107.602 134.137 107.176L115.164 67.1993C115.048 66.9538 114.885 66.7336 114.684 66.5515C114.482 66.3694 114.247 66.2291 113.991 66.1387C113.735 66.0482 113.464 66.0095 113.193 66.0246C112.922 66.0397 112.657 66.1085 112.412 66.2269L64.1596 89.0557C63.6758 89.2893 63.3029 89.7033 63.1211 90.2089C62.9392 90.7145 62.963 91.2713 63.1872 91.7596L196.478 372.82C196.715 373.314 197.136 373.694 197.651 373.879C198.167 374.063 198.734 374.036 199.23 373.805L247.494 350.905C247.74 350.789 247.96 350.626 248.143 350.425C248.325 350.224 248.466 349.989 248.557 349.733C248.649 349.478 248.689 349.207 248.675 348.935C248.662 348.664 248.595 348.399 248.479 348.153L177.125 197.744C148.06 136.456 153.574 92.139 198.139 70.9943C232.339 54.771 258.926 65.6814 282.798 107.248C282.83 107.296 282.858 107.348 282.881 107.402L368.939 288.846C402.143 358.815 453.716 382.841 508.183 357C550.281 337.03 567.737 306.967 566.717 267.428C566.706 266.956 566.857 266.495 567.146 266.12C567.434 265.746 567.842 265.483 568.301 265.373C568.761 265.263 569.244 265.314 569.67 265.518C570.096 265.722 570.439 266.065 570.643 266.492L589.806 306.896C589.922 307.141 590.085 307.361 590.286 307.544C590.487 307.726 590.722 307.867 590.978 307.959C591.233 308.05 591.504 308.09 591.775 308.077C592.046 308.063 592.312 307.996 592.557 307.88L640.822 284.98C641.068 284.864 641.288 284.701 641.47 284.5C641.652 284.299 641.792 284.063 641.883 283.807C641.973 283.551 642.012 283.28 641.997 283.009C641.982 282.738 641.913 282.473 641.794 282.229L508.503 1.17973C508.267 0.686051 507.845 0.305631 507.33 0.121286C506.815 -0.06306 506.248 -0.0364116 505.752 0.195423Z"
            fill="#1E65F3"
          />
        </svg>
      </div>
    </a>
    <div
      class="mr-sm-2"
    >
      <div
        class="d-inline-block network-selector dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-secondary"
          type="button"
        >
          Gemini
        </button>
      </div>
    </div>
  </nav>
  <div
    class="App"
  >
    <div
      class="staker-container"
    >
      <div
        class="container"
      >
        <nav
          class="tab-controls d-flex mx-auto nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="stake"
            href="#"
            role="tab"
          >
            Stake
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="withdraw"
            href="#"
            role="tab"
            tabindex="-1"
          >
            Withdraw
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="history"
            href="#"
            role="tab"
            tabindex="-1"
          >
            History
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <h2
                  class="text-center"
                >
                  Welcome back, 
                </h2>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Current period
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      18945
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Next period in
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      1 hours
                    </p>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Tokens staked
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-primary"
                        type="button"
                      >
                        Add stake
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Total rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Available for withdrawal
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        data-testid="withdraw-switch-button"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                />
                <div
                  class="mt-5 row"
                />
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Policy rewards
                    </p>
                    <p
                      class="h4 text-center"
                    />
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Rewards
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel"
            >
              <div
                class="w-100 row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="p-3 table"
                  >
                    <div
                      class="table-row table-header"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        Block #
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Action
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
